@@ -1,3 +1,10 @@
+2007-11-28  Jens Granseuer  <jensgr@gmx.net>
+
+	Based on patch by: Jakub Rusinek <liviopl.pl@gmail.com>
+
+	* gnome-default-applications.xml.in: add support for Midori web browser
+	(bug #500274)
+
 2007-11-26  Sebastien Bacher  <seb128@ubuntu.com>
 
 	* gnome-default-applications.xml.in: don't list the oudated evolution
